k8s/dbservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbservice
  template:
    metadata:
      labels:
        app: dbservice
    spec:
      containers:
        - name: dbservice
          image: leebadal1/yatzy-dbservice:v1.03
