k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000  # Choose a port in the range 30000-32767
  type: NodePort
