k8s/dbservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbservice-service
spec:
  selector:
    app: dbservice
  ports:
    - protocol: TCP
      port: 50051  # Your gRPC service port
      targetPort: 50051  # Your gRPC service port
